UI: Messages (but there are some issues)
Issues
1. showMessage never seems to be called in viewProduct when adding a
review. It doesn’t do all the other things like show the review and
rating either, even though it enters the if.
2. Regular, non-error messages still call showError sometimes (e.g.
Transaction Successful after checking out)

--- a/WebContent/resources/css/style.scss
+++ b/WebContent/resources/css/style.scss
@@ -881,3 +881,44 @@ select{
 .alignRight{
 	text-align: right;
 }
+
+// Error
+
+#message-display{
+    position: fixed;
+    bottom: 0px;
+    right: 20px;
+    padding: 40px 15px 15px;
+    border-radius: 5px;
+    font-weight: 700;
+    line-height: 1;
+    color: rgba(0, 0, 0, 0.8);
+    width: 200px;
+    opacity: 0;
+    z-index: 1051;
+    cursor: default;
+    display: none;
+}
+
+#message-display .head, #message-display .exit{
+    position: absolute;
+    top: 5px;
+    font-weight: 700;
+    line-height: 1;
+    color: #000;
+    text-shadow: 0 1px 0 #fff;
+    filter: alpha(opacity=50);
+    opacity: .50; 
+}
+
+#message-display button.exit{
+    right: 5px;
+    font-size: 0.6em;
+    background-color: transparent;
+    border: none;
+}
+
+#message-display .head{
+    left: 10px;
+    font-size: 1.3em;
+}
