Fixed word-wrap problem

--- a/WebContent/resources/css/style.css
+++ b/WebContent/resources/css/style.css
@@ -290,7 +290,8 @@ span.noResults {
 
 div.product {
   border: 1px #6c6c6c solid;
-  padding: 15px 0; }
+  padding: 15px 0;
+  word-wrap: break-word; }
   div.product:nth-of-type(odd) {
     background-color: lightgray; }
   div.product:nth-of-type(even) {
