--- a/WebContent/resources/css/style.css
+++ b/WebContent/resources/css/style.css
@@ -51,6 +51,7 @@ div#header {
     left: 250px;
     width: 200px; }
   div#header select#searchType {
+    padding-right: 20px;
     position: absolute;
     top: 28px;
     left: 455px; }
