UI: Is it fixed na?
Added one line of CSS

--- a/WebContent/resources/css/style.css
+++ b/WebContent/resources/css/style.css
@@ -50,7 +50,8 @@ div#header {
     max-width: 150px;
     white-space: nowrap;
     overflow: hidden;
-    text-overflow: ellipsis; }
+    text-overflow: ellipsis;
+    vertical-align: top; }
   div#header input#search {
     position: absolute;
     top: 28px;
