--- a/WebContent/resources/css/style.scss
+++ b/WebContent/resources/css/style.scss
@@ -72,7 +72,8 @@ div#header{
 		max-width: 150px;
 		white-space: nowrap;
 		overflow: hidden;
-		text-overflow: ellipsis
+		text-overflow: ellipsis;
+		vertical-align: top;
 	}
 
 	input#search{
